# CsExtensionInfoHelper

./: README.md
jni/: CMakeLists.txt  native.cpp
jni/include/covscript/: core.hpp
src/com/imkiva/cshelper/: AbstractExtensionData.java  CsCallableInfo.java  CsExtensionInfo.java  CsVariableInfo.java
src/com/imkiva/cshelper/jni/: CsExtensionHelper.java
